[package]
name = "hpu_sim"
version = "0.1.0"
edition = "2024"

[features]
default = []

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[dependencies]
# Swap them if want to rely on local version of ra2m
# ra2m = {path="../ra2m", features = []}
ra2m = {version = "0.1.0", features = []}
tfhe = { path = "../tfhe-rs-dev/tfhe", features = ["hpu", "hpu-debug"] }
# tfhe = { version = "1.4", features = ["hpu", "hpu-debug"] }
hc_sim = { path = "../hpu_compiler/hc_sim"}
hc_langs = { path = "../hpu_compiler/hc_langs"}
clap = { version = "=4.5.30", features = ["derive"] }
bytemuck = "1.24"
serde = { version = "1", features = ["derive"] }
itertools = "0.14.0"
bitfield-struct = "0.12.1"
toml = { version = "0.8", features = [] }
