[package]
name = "hpu_sim"
version = "0.1.0"
edition = "2024"

[features]
default = []

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[dependencies]
# NB: Some deps definition is duplicated to enbale != way to fetch them.
# Select the one that fits the more to your dev experience

# ra2m = {version = "0.1.0", features = []}
ra2m = {git = "ssh://git@github.com/zama-ai/ra2m.git", branch = "main", features = []} 
# ra2m = {path="../ra2m", features = []}

# tfhe = { version = "1.4", features = ["hpu", "hpu-debug"] }
tfhe = {git = "ssh://git@github.com/zama-ai/tfhe-rs-internal.git", branch = "hw-team/pr/multi-hpu", package = "tfhe", features = ["hpu", "hpu-debug"]} 
# tfhe = { path = "../tfhe-rs-dev/tfhe", features = ["hpu", "hpu-debug"] }

hc_sim = { git = "ssh://git@github.com/zama-ai/hpu_compiler.git", branch= "br/release", package="hc_sim"}
# hc_sim = { path = "../hpu_compiler/hc_sim"}

hc_langs = { git = "ssh://git@github.com/zama-ai/hpu_compiler.git", branch= "br/release", package="hc_langs"}
# hc_langs = { path = "../hpu_compiler/hc_langs"}

clap = { version = "=4.5.30", features = ["derive"] }
bytemuck = "1.24"
serde = { version = "1", features = ["derive"] }
itertools = "0.14.0"
bitfield-struct = "0.12.1"
toml = { version = "0.8", features = [] }
