[package]
name = "hpu_sim"
description = "Hpu simulation model based on Ra2m"
version = "1.0.0"
edition = "2024"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/zama-ai/hpu_sim"
readme = "README.md"

[features]
default = []

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[dependencies]
ra2m = {version = "1.0", features = []}

# tfhe = { version = "1.6", features = ["hpu", "hpu-debug"] }
tfhe = {git = "https://github.com/zama-ai/tfhe-rs.git", branch = "main", package = "tfhe", features = ["hpu", "hpu-debug"]} 

zhc_sim = { version = "0.7" }
zhc_langs = { version = "0.7" }

clap = { version = "4.6", features = ["derive"] }
bytemuck = "1.24"
serde = { version = "1", features = ["derive"] }
bitfield-struct = "0.12.1"
toml = { version = "0.8", features = [] }
